@@ -558,6 +558,13 @@ public class MovePanel extends AbstractMovePanel
         
         if (!allResults.isMoveValid())
         {
+            // if the player is invading only consider units that can invade
+            if (!m_nonCombat && MoveValidator.isUnload(route))
+            {
+            	best = Match.getMatches(best, new InverseMatch<Unit>(Matches.LandUnitThatCannotInvade));
+                bestWithDependents = addMustMoveWith(best);
+                lastResults = MoveValidator.validateMove(bestWithDependents, route, getCurrentPlayer(), transportsToLoad, m_nonCombat, getUndoableMoves(), getData());
+            }
             
             while (!best.isEmpty() && !lastResults.isMoveValid())
             {
